--- a/AboutBAKE.html
+++ b/AboutBAKE.html
@@ -46,6 +46,22 @@
 	  </div>
 	</nav>
 	<!-- main body -->
-	<p>BAKE (@bakesurrey on instagram), founded by Yasmeen Nabilah, is one of the most exciting up-and-coming cake companies in the south of England, having made a number of cakes and desserts for a range of occasions, including British actor Tom Hardy's birthday. She wanted a clean and simple brand which would supplement the exciting and flamboyant nature of the cakes. The vision was translated into a fresh and timeless brand.</p>
+	 <div class="rowaboutbake">
+	 	<h1 align="center">About BAKE</h1>
+	 	<p align="center">We know baking. Read down to learn how we started.</p>
+	 </div>
+	<div class="container">
+	 	<div class="col">
+			<div class="row">
+			    <div class="col-5">
+			      <img src="img/yasxmas.jpg" width="300px">
+			    </div>
+			    <div class="col bakerow" >
+			      <span>BAKE (@bakesurrey on instagram), founded by Yasmeen Nabilah, is one of the most exciting up-and-coming cake companies in the south of England, having made a number of cakes and desserts for a range of occasions, including British actor Tom Hardy's birthday. She wanted a clean and simple brand which would supplement the exciting and flamboyant nature of the cakes. The vision was translated into a fresh and timeless brand.</span>
+			    </div>
+			</div>
+		</div>
+	</div>
+
 </body>
 </html>
