--- a/index.html
+++ b/index.html
@@ -53,29 +53,30 @@
 	  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
 	  <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
 	</div>
-	<div class="container">
-	 	<div class="col">
-			<!-- Stack the columns on mobile by making one full-width and the other half-width -->
-		<div class="row">
-		  <div class="col-12 col-md-8"><img src="img/viennesewhirls.jpg"></div>
-		  <div class="col-6 col-md-4"><img src="loveheartcake.jpg"></div>
-		</div>
-		<!-- Columns start at 50% wide on mobile and bump up to 33.3% wide on desktop -->
-		<div class="row">
-		  <div class="col-6 col-md-4"><img src=""></div>
-		  <div class="col-6 col-md-4"><img src=""></div>
-		  <div class="col-6 col-md-4"><img src=""></div>
-		</div>
-		<!-- Columns are always 50% wide, on mobile and desktop -->
-		<div class="row">
-		  <div class="col-6"><img src=""></div>
-		  <div class="col-6"><img src=""></div>
-		</div>
-		</div>
-	</div>
+	<div class="row"> 
+	  <div class="column">
+	    <img src="img/profiteroles.jpg" style="width:100%">
+	    <img src="img/viennesewhirls.jpg" style="width:100%">
+	    <img src="img/wedding.jpg" style="width:100%">
+	    
+	  </div>
+	  <div class="column">
+	  	<img src="img/unicorn.jpg" style="width:100%">
+	    <img src="img/loveheartcake.jpg" style="width:100%">
+	    <img src="img/robinnightwing.jpg" style="width:100%">
 
-
-
-
+	    
+	  </div>
+	  <div class="column">
+	    <img src="img/cactus.jpg" style="width:100%">
+	    <img src="img/2cakelavendar.jpg" style="width:100%">
+	    <img src="img/zak.jpg" style="width:100%">
+	  </div>
+	  <div class="column">
+	  	<img src="img/tomhardy.jpg" style="width:100%">
+		<img src="img/figgy.jpg" style="width:100%">
+		<img src="img/macaron.jpg" style="width:100%">
+	  </div>  
+  	</div>
 </body>
 </html>
